--- a/react-movies/config.json
+++ b/react-movies/config.json
@@ -2,6 +2,7 @@
 
 {
     "backendUrl": "http://localhost:3000",
-    "enviroment": "production"
+    "enviroment": "production",
+    "port" : "3001"
 
 }
